--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.15.1",
     "gsap": "file:gsap-bonus.tgz",
     "nuxt": "^2.15.7",
+    "nuxt-i18n": "^6.28.1",
     "vue-scrollmagic": "^1.2.0",
     "vuetify": "^2.5.5"
   },
